assume that the plugin is no longer beta. [#156172415]
 Hid that text

--- a/plugin.html.md.erb
+++ b/plugin.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: PCF Event Alerts Plugin (Beta)
+title: PCF Event Alerts Plugin
 owner: PCF Event Alerts
 ---
 
@@ -8,7 +8,7 @@ for the cf Command Line Interface (CLI) tool.
 
 ##<a id='purpose'></a> Purpose
 
-The PCF Event Alerts plugin is in beta and is currently under development.
+[//]: # (IS THIS TRUE?  The PCF Event Alerts plugin is in beta and is currently under development.)
 
 The CLI plugin can be used to subscribe to topics that are published by a variety of publishers such as Healthwatch.
 
