--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -7,11 +7,11 @@ This documentation describes Event Alerts for Pivotal Cloud Foundry (PCF).
 
 ## <a id='overview'></a>Overview
 
-PCF Event Alerts is a service that sends event alerts as email and Slace notifications.
+PCF Event Alerts is a service that sends event alerts as email and Slack notifications.
 
 ## <a id='features'></a>Key Features
 
-The Event Alerts service enables you to notify users about Healthwatch alerts:
+The Event Alerts service enables you to notify users about events that publishers such as [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html) alert on:
 
 * Send notifications by email to specific users and to distribution lists.
 * Send notifications to Slack channels.
