--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -13,7 +13,7 @@ These are release notes for PCF Event Alerts.
 
 Features included in this release:
 
-* Sends Slack and email notifications of alerts about Healthwatch to users.
+* Sends Slack and/or email notifications of events that [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html) has alerted on.
 
 ### <a id="known"></a> Known Issues
 
