adds eva-topics command:

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -65,6 +65,8 @@ only) specify them individually:
 
 `cf eva-subscribe my-email healthwatch --topics system.mem.percent,system.cpu.user`
 
+A complete list of topics is available via the `cf eva-topics` command.
+
 If you would like to stop getting `system.cpu.user` alerts, unsubscribe:
 
 `cf eva-unsubscribe my-email --topics system.cpu.user`
