--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -192,6 +192,16 @@ You then subsribe this target to all alert topics from the publisher `healthwatc
 5. Verify a webhook message was posted to the webhook-ops 
 URL. In this example, that is `http://example.com/healthwatch-events/foundation-prod`.
 
-## <a id="commands"></a> Event Alert Commands
+## <a id="commands"></a> PCF Event Alert CLI Commands
+
+###<a id='help'></a> Get Help with Event Alert CLI Commands
+
+Run the following commands to get help on Evant Alert commands.
+
+* List all event alert commands: `cf plugins | grep event-alerts`
+
+* Get help on a specific command: `cf help COMMAND`
+
+### <a id="reference"></a> Event Alert Command Reference
 
 To see a list of existing alert targets run the command `cf eva-targets`.
