removes command ref subsection [#155725595]

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -192,9 +192,8 @@ You then subsribe this target to all alert topics from the publisher `healthwatc
 5. Verify a webhook message was posted to the webhook-ops 
 URL. In this example, that is `http://example.com/healthwatch-events/foundation-prod`.
 
-## <a id="commands"></a> PCF Event Alert CLI Commands
 
-###<a id='help'></a> Get Help with Event Alert CLI Commands
+##<a id='help'></a> Get Help with Event Alert CLI Commands
 
 Run the following commands to get help on Evant Alert commands.
 
@@ -202,6 +201,3 @@ Run the following commands to get help on Evant Alert commands.
 
 * Get help on a specific command: `cf help COMMAND`
 
-### <a id="reference"></a> Event Alert Command Reference
-
-To see a list of existing alert targets run the command `cf eva-targets`.
