--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -4,11 +4,12 @@ owner: PCF Event Alerts
 ---
 This topic describes how to set up alert destinations and subscribe to alerts. 
 This includes setting up the alert destinations as targets, and subscribing those targets to alert topics.
-An example [workflow](#example-workflow-webhook) is included below these procedures.
+An example workflow is included below these procedures: the [webhook workflow](#example-workflow-webhook).
 
 ##<a id='targets'></a> Create Targets for Alerts
 
-Targets are destinations for alerts and are unique to each user.
+Targets are destinations for alerts and are unique to each user. 
+A target can be an email address, a Slack channel, or a webhook.
 
 To create an alert target, do the following:
 
